Updated Nav Header to now have Icons next to the page title. Changed a lot of divs over to box components to cut down on css files. Created sub page header for stylistic consistency when not on a main page. Made the wage form overflow within the viewport for a better user experience. Changed some formatting on the dashboard. Fixed the error page. Nav drawer items now have their own icons.

--- a/timekeeper/src/scenes/Dashboard/AddWages/AddShift.css
+++ b/timekeeper/src/scenes/Dashboard/AddWages/AddShift.css
@@ -1,8 +1,3 @@
-.add-wages-container {
-  width: 100%;
-  padding: 3rem;
-}
-
 .earned-wages-container {
   width: 100%;
   height: 100%;
